--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,14 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-# url: "http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: "/kdublog/" # the subpath of your site, e.g. /blog/
+url: "http://kimdongup.github.io" # the base hostname & protocol for your site
 twitter_username: kimdongup
 github_username:  kimdongup
 # Build settings
 markdown: kramdown
 # Github base
-highlighter: pygments
+highlighter: false
 github: https://github.com/kimdongup/kdublog
 encoding: UTF-8
 paginate: 10
